cluster/manifests/github-actions-runner-controller/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: github-actions-runner-controller
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: github-actions-runner-controller
  mtls:
    mode: STRICT
