cluster/manifests/github-actions-runner-controller/overlays/dev/service_entry.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: api.github.com
spec:
  exportTo:
    - .
  hosts:
    - api.github.com
  location: MESH_EXTERNAL
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: DNS
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: wildcard.actions.githubusercontent.com
spec:
  exportTo:
    - .
  hosts:
    - "*.actions.githubusercontent.com"
  location: MESH_EXTERNAL
  ports:
    - name: https
      number: 443
      protocol: HTTPS
  resolution: NONE
