cluster/manifests/github-actions-runner-controller/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: github-actions-runner-controller
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: github-actions-runner-controller
      app.kubernetes.io/component: ""
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./api.github.com
        - ./*.actions.githubusercontent.com
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
        - default/kubernetes.default.svc.cluster.local
        - default/etcd.default.svc.cluster.local
